--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       email address by clicking the button below:
     </p>
     <p>
-      <a id="verifyButton" href="{{.VerificationLink}}" class="button">Verify Email</a>
+      <a id="verifyButton" href="#" class="button">Verify Email</a>
     </p>
     <p>
       If you didn't request this verification, you can safely ignore this
